--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jsdoc-tsd-webpack-plugin",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "main": "index.js",
   "scripts": {
     "build:prod": "rimraf dist && cross-env NODE_ENV=production babel src --out-dir dist",
@@ -36,7 +36,9 @@
   "peerDependencies": {
     "webpack": "^4.28.0"
   },
-  "optionalDependencies": {},
+  "optionalDependencies": {
+    "publishimo-webpack-plugin": "1.7.5"
+  },
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/node": "^7.2.2",
@@ -48,7 +50,7 @@
     "eslint": "^5.12.1",
     "eslint-config-jaid": "^1.10.0",
     "jest": "24.0.0-alpha.12",
-    "publishimo-webpack-plugin": "^1.7.2",
+    "publishimo-webpack-plugin": "1.7.5",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1",
     "webpack-config-jaid": "^1.16.1"
