--- a/package.json
+++ b/package.json
@@ -41,13 +41,13 @@
     "@babel/core": "^7.2.2",
     "@babel/node": "^7.2.2",
     "@babel/register": "^7.0.0",
-    "babel-jest": "24.0.0-alpha.12",
+    "babel-jest": "^24.0.0",
     "babel-preset-jaid": "^2.6.0",
     "clean-webpack-plugin": "^1.0.1",
     "cross-env": "^5.2.0",
     "eslint": "^5.12.1",
     "eslint-config-jaid": "^1.10.0",
-    "jest": "24.0.0-alpha.12",
+    "jest": "^24.0.0",
     "opn-cli": "^4.0.0",
     "publishimo-webpack-plugin": "1.7.5",
     "webpack": "^4.29.0",
