--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "version": "1.3.0",
   "scripts": {
+    "clean": "rimraf dist test/*/dist test/*/dist-jsdoc",
     "build:prod": "NODE_ENV=production webpack",
     "build:dev": "webpack",
     "test": "jest",
@@ -46,6 +47,7 @@
     "jest": "^24.0.0",
     "opn-cli": "^4.0.0",
     "publishimo-webpack-plugin": "1.7.5",
+    "rimraf": "^2.6.3",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1",
     "webpack-config-jaid": "1.18.0"
