--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
     "clean": "rimraf dist test/*/dist test/*/dist-jsdoc",
     "build:prod": "NODE_ENV=production webpack",
     "build:dev": "webpack",
-    "test": "jest",
+    "test": "cross-env NODE_ENV=production jest",
     "test:dev": "jest",
     "test:debug": "cross-env babel-node --inspect=9229 node_modules/jest/bin/jest.js --runInBand",
-    "prepare": "jest --clearCache",
     "release": "npm run build:prod && npm publish dist && cross-env git tag v$npm_package_version && git push --tags && cross-env opn https://github.com/$npm_package_author_name/$(basename $PWD)/releases/new?tag=v$npm_package_version"
   },
   "author": "Jaid <jaid.jsx@gmail.com> (https://github.com/Jaid)",
