Added debug output

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "jsdoc-export-default-interop": "^0.3.1",
     "node-exec-promise": "^1.0.2",
     "tmp-promise": "^1.0.5",
-    "tsd-jsdoc": "^2.1.2"
+    "tsd-jsdoc": "^2.1.2",
+    "debug": "^4.1.1"
   },
   "peerDependencies": {
     "webpack": "^4.28.0"
