--- a/package.json
+++ b/package.json
@@ -15,18 +15,16 @@
   },
   "dependencies": {
     "better-docs": "^1.1.2",
-    "command-join": "^2.0.0",
     "debug": "^4.1.1",
     "first-existing-path": "^1.0.1",
-    "get-exec-file": "^1.1.0",
-    "jsdoc": "^3.5.5",
+    "jsdoc-api": "^4.0.3",
     "jsdoc-babel": "^0.5.0",
     "jsdoc-export-default-interop": "^0.3.1",
     "tmp-promise": "^1.0.5",
     "tsd-jsdoc": "^2.1.2"
   },
   "peerDependencies": {
-    "webpack": "^4.28.0"
+    "webpack": "^4.29.0"
   },
   "optionalDependencies": {
     "publishimo-webpack-plugin": "1.8.1"
