--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "publishimo-webpack-plugin": "1.8.1"
   },
   "devDependencies": {
+    "@absolunet/fsp": "^1.4.0",
     "babel-jest": "^24.0.0",
     "babel-preset-jaid": "^2.9.0",
     "clean-webpack-plugin": "^1.0.1",
