--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "better-docs": "^1.1.4",
+    "debug": "^4.1.1",
     "first-existing-path": "^1.0.1",
     "jsdoc-api": "^4.0.3",
     "jsdoc-babel": "^0.5.0",
@@ -49,8 +50,8 @@
     "build:prod": "cross-env NODE_ENV=production webpack",
     "build:dev": "webpack",
     "test": "jest && npm run build:prod && cross-env MAIN=dist jest",
-    "test:dev": "npm run build:dev && jest",
-    "test:debug": "node --inspect=9229 node_modules/jest/bin/jest.js --runInBand",
+    "test:dev": "jest",
+    "test:debug": "cross-env DEBUG=$(basename $PWD) cross-env node --inspect node_modules/jest/bin/jest.js --runInBand",
     "release": "npm test && cross-env git tag v$npm_package_version && git push --tags && cross-env opn https://github.com/$npm_package_author_name/$(basename $PWD)/releases/new?tag=v$npm_package_version"
   }
 }
