--- a/.travis.yml
+++ b/.travis.yml
@@ -8,30 +8,30 @@ jobs:
     - stage: Deploy
       before_deploy:
         - npm run build:prod
-        - export PKG_NAME=$(node -e "console.log(require('./dist/package').name)")
-        - export PKG_VERSION=$(node -e "console.log(require('./dist/package').version)")
-        - cd dist
-        - zip -9 --recurse-paths ../${PKG_NAME}_v$PKG_VERSION.zip **
-        - zip -9 --recurse-paths ../${PKG_NAME}_v${PKG_VERSION}_min.zip ** --exclude \*.d.ts --exclude readme.* --exclude \*.map
-        - cd ..
+        - export PKG_NAME=$(node -e "console.log(require('./dist/package/production/package').name)")
+        - export PKG_VERSION=$(node -e "console.log(require('./dist/package/production/package').version)")
+        - cd dist/package/production
+        - zip -9 --recurse-paths ../../${PKG_NAME}_v$PKG_VERSION.zip **
+        - zip -9 --recurse-paths ../../${PKG_NAME}_v${PKG_VERSION}_min.zip ** --exclude \*.d.ts --exclude readme.* --exclude \*.map
+        - cd ../../..
       deploy:
         - provider: pages
-          local_dir: dist-jsdoc/$PKG_NAME/$PKG_VERSION
+          local_dir: dist/homepage/$PKG_NAME/$PKG_VERSION
           fqdn: $PKG_NAME.jaid.codes
           skip_cleanup: true
           github_token: $GITHUB_TOKEN # Permissions: public_repo, repo:status, repo_deployment
         - provider: releases
           file_glob: true
           file:
-            - dist/package.json
-            - dist/license.*
-            - dist/*.d.ts
-            - "*.zip"
+            - dist/package/production/package.json
+            - dist/package/production/license.*
+            - dist/package/production/*.d.ts
+            - "dist/*.zip"
           skip_cleanup: true
           name: $PKG_NAME $PKG_VERSION
           api_key: $GITHUB_TOKEN # Permissions: public_repo, repo:status, repo_deployment
           on: { tags: true }
         - provider: script
-          script: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > .npmrc && npm publish dist
+          script: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > .npmrc && npm publish dist/package/production
           skip_cleanup: true
           on: { tags: true }
