--- a/package.json
+++ b/package.json
@@ -47,10 +47,10 @@
     "webpack-config-jaid": "2.0.0"
   },
   "scripts": {
-    "clean": "rimraf dist test/*/dist test/*/info",
+    "clean": "rimraf **/dist/",
     "build:prod": "cross-env NODE_ENV=production webpack",
     "build:dev": "webpack",
-    "test": "jest && npm run build:prod && cross-env MAIN=dist jest",
+    "test": "jest && npm run build:prod && cross-env MAIN=dist/package/production jest",
     "test:dev": "jest",
     "test:debug": "cross-env DEBUG=$(basename $PWD) cross-env node --inspect node_modules/jest/bin/jest.js --runInBand",
     "release": "npm test && cross-env git tag v$npm_package_version && git push --tags && cross-env opn https://github.com/$npm_package_author_name/$(basename $PWD)/releases/new?tag=v$npm_package_version"
