--- a/package.json
+++ b/package.json
@@ -2,20 +2,9 @@
   "private": true,
   "version": "3.1.2",
   "author": "Jaid <jaid.jsx@gmail.com> (https://github.com/Jaid)",
-  "babel": {
-    "presets": [
-      "jaid"
-    ]
-  },
-  "eslintConfig": {
-    "extends": "jaid"
-  },
-  "jest": {
-    "testEnvironment": "node"
-  },
   "dependencies": {
-    "@absolunet/fss": "^1.4.0",
-    "better-docs": "^1.1.4",
+    "@absolunet/fss": "^1.6.0",
+    "better-docs": "^1.1.5",
     "debug": "^4.1.1",
     "first-existing-path": "^1.0.1",
     "jsdoc-api": "^4.0.3",
@@ -25,34 +14,38 @@
     "tsd-jsdoc": "^2.1.3"
   },
   "peerDependencies": {
-    "webpack": "^4.29.3"
+    "webpack": "^4.29.6"
   },
   "optionalDependencies": {
-    "publishimo-webpack-plugin": "1.11.0"
+    "publishimo-webpack-plugin": "1.13.1"
   },
   "devDependencies": {
-    "@absolunet/fsp": "^1.4.0",
-    "babel-jest": "^24.1.0",
-    "babel-preset-jaid": "^2.11.0",
-    "clean-webpack-plugin": "^1.0.1",
+    "@absolunet/fsp": "^1.6.0",
+    "babel-jest": "^24.3.1",
+    "babel-preset-jaid": "^5.5.0",
+    "clean-webpack-plugin": "^2.0.0",
     "cross-env": "^5.2.0",
-    "eslint": "^5.13.0",
-    "eslint-config-jaid": "^1.11.1",
-    "jest": "^24.1.0",
+    "eslint": "^5.15.1",
+    "eslint-config-jaid": "^1.12.0",
+    "jest": "^24.3.1",
     "opn-cli": "^4.0.0",
-    "publishimo-webpack-plugin": "1.11.0",
+    "publishimo-webpack-plugin": "1.13.1",
     "rimraf": "^2.6.3",
-    "webpack": "^4.29.3",
+    "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
-    "webpack-config-jaid": "2.4.0"
+    "webpack-config-jaid": "3.2.1"
   },
   "scripts": {
-    "clean": "rimraf **/dist/",
-    "build:prod": "cross-env NODE_ENV=production webpack",
+    "clean": "rimraf dist/ test/**/dist/",
+    "babel:prod": "rimraf dist/src-transpiled/production && NODE_ENV=production babel --out-dir dist/src-transpiled/production --source-maps true src",
+    "babel:dev": "rimraf dist/src-transpiled/development && babel --out-dir dist/src-transpiled/development src",
+    "babel:test": "rimraf dist/src-transpiled/test && NODE_ENV=test babel --out-dir dist/src-transpiled/test src",
+    "build:prod": "NODE_ENV=production webpack",
     "build:dev": "webpack",
-    "test": "jest && npm run build:prod && cross-env MAIN=dist/package/production jest",
-    "test:dev": "jest",
-    "test:debug": "cross-env DEBUG=$(basename $PWD) cross-env node --inspect node_modules/jest/bin/jest.js --runInBand",
-    "release": "npm test && cross-env git tag v$npm_package_version && git push --tags && cross-env opn https://github.com/$npm_package_author_name/$(basename $PWD)/releases/new?tag=v$npm_package_version"
+    "test": "npm run build:prod && NODE_ENV=production MAIN=dist/package/production jest --runInBand",
+    "test:coverage": "npm run test:dev -- --coverage --json --outputFile=dist/jest/stats.json",
+    "test:dev": "NODE_ENV=test jest --runInBand",
+    "test:debug": "DEBUG=\"$(basename $PWD),$(basename $PWD):*\" NODE_ENV=test node --inspect=9229 node_modules/jest/bin/jest.js --runInBand",
+    "release": "npm run clean && npm test && git tag v$npm_package_version && git push --tags && opn https://github.com/$npm_package_author_name/$(basename $PWD)/releases/new?tag=v$npm_package_version"
   }
 }
