--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "jsdoc-api": "^5.0.1",
     "jsdoc-babel": "^0.5.0",
     "jsdoc-export-default-interop": "^0.3.1",
-    "tmp-promise": "^2.0.0",
     "tsd-jsdoc": "^2.1.3"
   },
   "peerDependencies": {
@@ -21,6 +20,7 @@
   },
   "devDependencies": {
     "@absolunet/fsp": "^1.6.1",
+    "acorn": "^6.1.1",
     "babel-jest": "^24.8.0",
     "babel-preset-jaid": "^6.2.0",
     "clean-webpack-plugin": "^2.0.2",
@@ -28,12 +28,11 @@
     "eslint": "^5.16.0",
     "eslint-config-jaid": "^1.12.0",
     "jest": "^24.8.0",
-    "opn-cli": "^5.0.0",
-    "publishimo-webpack-plugin": "1.13.1",
+    "open-cli": "^5.0.0",
     "rimraf": "^2.6.3",
     "webpack": "^4.31.0",
     "webpack-cli": "^3.3.2",
-    "webpack-config-jaid": "3.21.0"
+    "webpack-config-jaid": "3.21.1"
   },
   "scripts": {
     "clean": "rimraf dist/ test/**/dist/",
@@ -46,6 +45,6 @@
     "test:coverage": "npm run test:dev -- --coverage --json --outputFile=dist/jest/stats.json",
     "test:dev": "NODE_ENV=test jest --runInBand",
     "test:debug": "DEBUG=\"$(basename $PWD),$(basename $PWD):*\" NODE_ENV=test node --inspect=9229 node_modules/jest/bin/jest.js --runInBand",
-    "release": "npm run clean && npm test && git tag v$npm_package_version && git push --tags && opn https://github.com/$npm_package_author_name/$(basename $PWD)/releases/new?tag=v$npm_package_version"
+    "release": "npm run clean && npm test && git tag v$npm_package_version && git push --tags && open-cli https://github.com/$npm_package_author_name/$(basename $PWD)/releases/new?tag=v$npm_package_version"
   }
 }
