--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jest": "^24.8.0",
     "open-cli": "^5.0.0",
     "rimraf": "^2.6.3",
+    "tmp-promise": "^1.1.0",
     "webpack": "^4.31.0",
     "webpack-cli": "^3.3.2",
     "webpack-config-jaid": "3.21.1"
