--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "private": true,
   "webpackConfigJaid": "nodeClass",
   "version": "3.3.6",
   "author": "Jaid <jaid.jsx@gmail.com> (https://github.com/Jaid)",
@@ -45,5 +44,6 @@
     "test:coverage": "npm run test:dev -- --coverage --json --outputFile=dist/jest/stats.json",
     "test:dev": "NODE_ENV=test jest --runInBand",
     "test:debug": "DEBUG=\"$(basename $PWD),$(basename $PWD):*\" NODE_ENV=test node --inspect=9229 node_modules/jest/bin/jest.js --runInBand"
-  }
+  },
+  "name": "jsdoc-tsd-webpack-plugin"
 }
