--- a/package.json
+++ b/package.json
@@ -46,5 +46,6 @@
     "test:debug": "DEBUG=\"$(basename $PWD),$(basename $PWD):*\" NODE_ENV=test node --inspect=9229 node_modules/jest/bin/jest.js --runInBand",
     "prepareActionJest": "npm run build:prod"
   },
-  "name": "jsdoc-tsd-webpack-plugin"
+  "name": "jsdoc-tsd-webpack-plugin",
+  "description": "Generates project homepages and a TypeScript definition files with Webpack."
 }
